--- a/src/layouts/mergedLayout.astro
+++ b/src/layouts/mergedLayout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
         <a href="/" class="nav-home">Home</a>
         <div class="nav-links">
           <a href="/publications">Publications</a>
-          <a href="public/CV_Mohamad.pdf" target="_blank">CV</a>
+          <a href="CV_Mohamad.pdf" target="_blank">CV</a>
         </div>
       </div>
     </nav>
